Note that this file only includes changes since Ice 3.2.1. For the
change history of prior releases, refer to the CHANGES file in the
subdirectory of each language mapping (e.g., cpp/CHANGES).


======================================================================
Changes since version 3.4.2
======================================================================


General Changes
===============

- Fixed a per-session memory leak in Glacier2 that occurred when
  request buffering was enabled.

- Fixed IceStorm bug that could cause a crash when using the Freeze
  database backend and multiple threads were trying to write to the
  database.

- Fixed minor performance issue with bi-directional proxies.

- Added support for replica and node name verification when securing
  the IceGrid node and registries. The names are matched against the
  certificate common name. The connection is rejected if the
  certificate CN doesn't match the replica or node name. The
  properties IceGrid.Registry.RequireNodeCertCN and
  IceGrid.Registry.RequireReplicaCertCN must be set to 1 to enable
  this verification.

- Fixed IceGrid bug where the server deactivation timeout would be
  ignored if the server was not deactivated using the IceGrid
  administrative facility.

- Fixed IceSSL bug in all language mappings that could cause a server
  to crash if a failure occurred during connection establishment and
  network tracing was enabled.


C++ Changes
===========

- Added support for clang compiler on Mac OS X.

- Fixed issue where a connection to a remote address would always fail
  with an assertion on Windows 8.

- Declaring ice_print for local exceptions is now optional. This
  method is not declared by default, but you can use the metadata tag
  "cpp:ice_print" to enable the method declaration. 


Visual Studio Add-in Changes
============================

- Fixed a bug with C++ projects that build static libraries.
