@@ -25,13 +25,14 @@ class ServerAdapterI : public Adapter, public IceUtil::Mutex
 {
 public:
     
-    ServerAdapterI(const NodeIPtr&, ServerI*, const std::string&, const AdapterPrx&, const std::string&);
+    ServerAdapterI(const NodeIPtr&, ServerI*, const std::string&, const AdapterPrx&, const std::string&, bool);
     virtual ~ServerAdapterI();
 
     virtual void activate_async(const AMD_Adapter_activatePtr& cb, const Ice::Current&);
     virtual Ice::ObjectPrx getDirectProxy(const Ice::Current& = Ice::Current()) const;
     virtual void setDirectProxy(const ::Ice::ObjectPrx&, const ::Ice::Current& = Ice::Current());
     void destroy();
+    void updateEnabled();
     void clear();
     void activationFailed(const std::string&);
     void activationCompleted();
@@ -48,6 +49,7 @@ private:
     ServerI* _server;
 
     Ice::ObjectPrx _proxy;
+    bool _enabled;
     std::vector<AMD_Adapter_activatePtr> _activateCB;
     bool _activateAfterDeactivating;
 };
